# Iris-Engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Iris Engine.sln  README.md  vcpkg-configuration.json  vcpkg.json
Iris Engine/: Alignment.h  Asset.cpp  Asset.h  BackgroundObject.cpp  BackgroundObject.h  ButtonMenu.cpp  ButtonMenu.h  ButtonObject.cpp  ButtonObject.h  CMakeLists.txt  CPUImage.cpp  CPUImage.h  CharacterObject.cpp  CharacterObject.h  ClearScene.cpp  ClearScene.h  ClickableMap.cpp  ClickableMap.h  ColorGradingShader.cpp  ColorGradingShader.h  Config.cpp  Config.h  Cursor.cpp  Cursor.h  DissolveShader.cpp  DissolveShader.h  EaseInInterpolator.cpp  EaseInInterpolator.h  EaseInOutInterpolator.cpp  EaseInOutInterpolator.h  EaseOutInterpolator.cpp  EaseOutInterpolator.h  FontComponent.cpp  FontComponent.h  FontProperties.h  GPURenderer.cpp  GPURenderer.h  GPUShaderProgram.cpp  GPUShaderProgram.h  GPUTexture.cpp  (+119 more)
Iris Engine/Game/: Game.cpp  Game.h
Iris Engine/shaders/: YCbCr.frag  color.frag  colorGrading.frag  dissolve.frag  imageDissolve.frag
docs/en/: .gitignore  Makefile  make.bat
docs/en/source/: conf.py  config.rst  formats.rst  glossary.rst  index.rst  visuals.rst
docs/en/source/getting_started/: first_game.rst  templates.rst  top.rst
docs/en/source/language/: top.rst
docs/en/source/language/api/: top.rst
docs/en/source/language/api/enums/: interpolator.rst  (+2 more)
registry/ports/sdl-gpu/0.12.0/: change-build-paths.patch  portfile.cmake  vcpkg.json
registry/versions/: baseline.json
registry/versions/s-/: sdl-gpu.json
(+95 files in other folders)
